# ai_voice_assistant

./: README.md  credentials.json  main.py  pyproject.toml  token.json
src/config/: settings.py
src/core/: assistant.py  graph_builder.py  state.py
src/edges/: base_edge.py  calendar_edge.py  chrome_edge.py  file_manager_edge.py  keyboard_edge.py  redirector_edge.py
src/nodes/: base_node.py  browser_node.py  calendar_node.py  chatbot_node.py  search_node.py  softwares_node.py  system_node.py  youtube_node.py
src/nodes/calendar/: base_node.py  calendar_delete_node.py  calendar_node.py  calendar_update_node.py  calender_create_node.py  calender_final_node.py
src/nodes/chrome/: base_node.py  chrome_close_node.py  chrome_func.py  chrome_func_node.py  chrome_node.py  chrome_tab_node.py
src/nodes/filemanage/: files_close_node.py  files_func_node.py  files_node.py  files_read_node.py  files_tab_node.py  files_write_node.py
src/nodes/keyboard/: keyboard_hotkey.py  keyboard_node.py  keyboard_presskey.py  keyboard_write.py
src/services/: filemanger_service.py  llm_service.py  selenium_service.py
src/tools/: browser_tools.py  calendar_tools.py  chrome_func_tools.py  chrome_tab_tools.py  files_func_tools.py  files_read_tools.py  files_tab_tools.py  files_write_tools.py  search_tools.py  softwares_tool.py  system_tools.py
src/utils/: conversation.py
