[project]
name = "ai-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-auth>=2.40.3",
    "gputil>=1.4.0",
    "gtts>=2.5.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-community[calendar]>=2.0.7",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.5",
    "nest-asyncio>=1.6.0",
    "playwright>=1.54.0",
    "psutil>=7.0.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pycaw>=20240210",
    "pygame>=2.6.1",
    "pyowm>=3.3.0",
    "pytz>=2025.2",
    "screen-brightness-control>=0.24.2",
    "setuptools>=80.9.0",
    "speechrecognition>=3.14.3",
    "tzdata>=2025.2",
    "wikipedia>=1.4.0",
]
